# GRPC-Kotlin-Multiplatform

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.md  THIRD_PARTY_LICENSES.txt  build.gradle.kts  gradle.properties  js-tests.yml  readme.md  settings.gradle.kts
.github/actions/integration-test-action/: action.yml
.github/actions/wait-for-server-action/: action.yml
.github/workflows/: build_example_apps.yml  core_test.yml  example_app_tests.yml  integration-tests.yml  integration_tests.yml  plugin_tests.yml  release.yml  wellknown_extensions_test.yml
Hello-World-Example/: README.md  settings.gradle.kts
Hello-World-Example/composeApp/: build.gradle.kts
Hello-World-Example/composeApp/src/androidMain/: AndroidManifest.xml
Hello-World-Example/composeApp/src/commonMain/proto/: hello.proto
Hello-World-Example/composeApp/src/wasmJsMain/resources/: index.html
Hello-World-Example/gradle/: libs.versions.toml
Hello-World-Example/iosApp/Configuration/: Config.xcconfig
Hello-World-Example/iosApp/iosApp.xcodeproj/: project.pbxproj
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/java/: BuildSettings.kt  MultiplatformTargets.kt
buildSrc/src/main/kotlin/: CustomPodBuildTask.kt  PatchedPodGenTask.kt  TestServer.kt  Versions.kt  podbuildworkaround.kt
buildSrc/test-server/: build.gradle.kts
docker-tests/: envoy.yml  js-tests.yml
example/: build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
example/android/: build.gradle.kts
example/android/src/main/: AndroidManifest.xml
example/buildSrc/src/main/kotlin/: Versions.kt
example/common/: build.gradle.kts
example/common/src/androidMain/: AndroidManifext.xml
example/compose-ios/: build.gradle.kts
example/compose-ios/src/uikitMain/kotlin/: main.uikit.kt
example/generate-proto/: build.gradle.kts
example/iosApp/: Podfile
example/js/: build.gradle.kts
example/jvm/: build.gradle.kts
example/protos/src/main/proto/: hello.proto
examples/compose-example/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/compose-example/composeApp/: build.gradle.kts
examples/compose-example/composeApp/src/androidMain/: AndroidManifest.xml
examples/compose-example/composeAppJs/: build.gradle.kts
examples/compose-example/gradle/: libs.versions.toml
examples/compose-example/iosApp/: Podfile
examples/compose-example/iosApp/Configuration/: Config.xcconfig
examples/compose-example/iosApp/iosApp/: ContentView.swift
examples/compose-example/iosApp/iosApp.xcodeproj/: project.pbxproj
examples/compose-example/proto/: communication.proto
examples/compose-example/server/: build.gradle.kts
examples/native-integration/: build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
examples/native-integration/android/: build.gradle.kts
examples/native-integration/android/src/main/: AndroidManifest.xml
examples/native-integration/common/: build.gradle.kts
examples/native-integration/iosApp/: .gitignore
examples/native-integration/iosApp/iosApp/: ContentView.swift
examples/native-integration/iosApp/iosApp.xcodeproj/: project.pbxproj
examples/native-integration/js/: build.gradle.kts
examples/native-integration/jvm/: build.gradle.kts
examples/native-integration/protos/: build.gradle.kts
gradle/: libs.versions.toml
grpc-mp-test/: build.gradle.kts
grpc-mp-test/src/androidMain/: AndroidManifest.xml
grpc-mp-test/src/commonMain/proto/: basicMessages.proto  test.proto  test2.proto  test3.proto
grpc-mp-test/src/jvmMain/kotlin/: test.kt
grpc-mp-test/test-android-protos/: build.gradle.kts
grpc-mp-test/test-android-protos/src/main/: AndroidManifest.xml
grpc-mp-test/test-jvm-protos/: build.gradle.kts
grpc-multiplatform-lib/: build.gradle.kts
grpc-multiplatform-lib/src/androidMain/: AndroidManifest.xml
kmp-grpc-core/: build.gradle.kts  gradle.properties
kmp-grpc-core/src/nativeInterop/cinterop/: kmp_grpc_native.def  kmp_grpc_native_rust.def
kmp-grpc-core/src/nativeInterop/cinterop/debug/: kmp_grpc_native.def
kmp-grpc-core/src/nativeInterop/cinterop/release/: kmp_grpc_native.def
kmp-grpc-core/src/nativeTest/kotlin/: MainTest.kt
kmp-grpc-internal-test/: build.gradle.kts  envoy.yml  gencertificate.sh  gencertificates.sh
kmp-grpc-internal-test/src/commonMain/proto/: conflictingMessages.proto
kmp-grpc-internal-test/src/commonMain/proto/editions/: closed-enum-test.proto  editions-declarations.proto  editions-packed-test-messages.proto  editions-test-service.proto  editions2023-basic-messages.proto  extensions-test.proto  open-enum-test.proto
kmp-grpc-internal-test/src/commonMain/proto/general/: basicMessages.proto  cancellationTestMessages.proto  conflictingMessages.proto  file_with_underscores.proto  hello.proto  interceptorTestMessages.proto  packedTestMessages.proto  (+1 more)
kmp-grpc-internal-test/src/jvmMacOsTest/kotlin/: DefaultCertificatesRpcTest.kt
kmp-grpc-internal-test/test-server/: .gitignore  build.gradle.kts
kmp-grpc-internal-test/test-server-python/: gensources.sh  requirements.txt
kmp-grpc-internal-test/test-server-python/server/: app.py
kmp-grpc-native/: .gitignore  CMakeLists.txt  Cargo.toml  Cross.toml  about.hbs  about.toml  compile.sh  genheaders.sh  genlicensetexts.sh  rpcnative.cpp  rpcnative.h  test2.cpp
kmp-grpc-native-rust/: .gitignore  Cargo.toml  cbindgen.toml
kmp-grpc-native-rust/src/: lib.rs  rawcoding.rs  rawpointer.rs
kmp-grpc-native/src/: cinterop.rs  lib.rs  rawcoding.rs  rpc.rs
kmp-grpc-plugin/: build.gradle.kts
kmp-grpc-plugin/buildSrc/: build.gradle.kts
kmp-grpc-plugin/src/main/resources/: io
kmp-grpc-plugin/src/test/resources/: declaration-test-basic.proto  declaration-test-editions.proto  deprecated-test.proto
kmp-grpc-wellknown-ext/: build.gradle.kts
kmp-grpc-wellknown-ext/src/commonTest/proto/: testmessages.proto
plugin/: build.gradle.kts
pod-build-workaround/: build.gradle.kts
pod-build-workaround/shared-src/main/java/: CustomPodBuildTask.kt  podbuildworkaround.kt
pod-build-workaround/src/main/java/: PodBuildWorkaroundPlugin.kt
(+950 files in other folders)
