[package]
name = "kmp-grpc-native"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.14.2", features = ["channel", "tls-ring", "tls-webpki-roots"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
rustls-webpki = "0.103.7"
bytes = "1.10.1"
once_cell = "1.21.3"
log = "0.4.27"
env_logger = "0.11.8"

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1